fp-macros/tests/ui/missing_for_keyword.stderr
error: expected `for`
  --> tests/ui/missing_for_keyword.rs:11:2
   |
11 |     MyBrand {
   |     ^^^^^^^
